Add job meta
