# docs/swagger.json
@@ -173,7 +173,8 @@
             "put": {
                 "description": "Overwrites job if it exists.",
                 "consumes": [
-                    "*/*"
+                    "application/json",
+                    " */*"
                 ],
                 "produces": [
                     "application/json"
@@ -209,6 +210,14 @@
                         "description": "Who's using this job (optional) eg. hostname of machine using it.",
                         "name": "in_use_by",
                         "in": "query"
+                    },
+                    {
+                        "description": "Job metadata (optional) - arbitrary json can be stored in {meta: {...}}",
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/main.PutJobByIdBody"
+                        }
                     }
                 ],
                 "responses": {
@@ -360,7 +369,8 @@
                 },
                 "last_used_on": {
                     "type": "string"
-                }
+                },
+                "meta": {}
             }
         },
         "main.JobResponse": {
@@ -380,6 +390,12 @@
                         "$ref": "#/definitions/main.Job"
                     }
                 }
+            }
+        },
+        "main.PutJobByIdBody": {
+            "type": "object",
+            "properties": {
+                "meta": {}
             }
         },
         "main.SuccessResponse": {
